# appgithubaction

./: .dockerignore  .gitignore  AIRFLOW_DAG_GUIDE.md  CI_CD_PIPELINE.md  DOCKER_AIRFLOW_SETUP.md  airflow.cfg  airflow_web_ui.py  dag_visualization.html  docker-compose.yml  generate_dag_viz.py  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: python-app.yml
dags/: ml_pipeline_dag.py
src/: math_operations.py
