[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appgithubaction"
version = "0.1.0"
description = "ML CI/CD Pipeline with Math Operations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint]
max-line-length = 120
